syntax = "proto3";

option csharp_namespace = "GrpcNet7JSONTranscoding.Protos";

package address;

message Address {
	string number = 1;
	string street_name = 2;
	string suburb = 3;
	string city = 4;
	string country = 5;
}